<resources>
    <string name="app_name">小海囤</string>

    <!-- 登录注册 -->
    <string name="phone_str">手机号码</string>
    <string name="pwd_str">密码</string>
    <string name="login_str">登录</string>
    <string name="user_login_str">用户登录</string>
    <string name="new_regist_str">新用户注册</string>
    <string name="regist_str">注册</string>
    <string name="regist_code_str">验证码</string>
    <string name="regist_pwd_str">请设置6-12位登录密码</string>
    <string name="skip_login_str">快速登录</string>
    <string name="lose_pwd_str">忘记密码</string>
    <string name="cancel_str">取消</string>
    <!-- 购物车 -->
    <string name="menu_edit">编辑</string>
    <string name="menu_enter">完成</string>
    <string name="menu_del">删除</string>
    <string name="menu_sett">结算</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <!-- 下拉刷新/下拉加载更多 -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新 &#8230;</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_header_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">继续上拉加载</string>
    <string name="pull_to_refresh_header_pull_label">下拉加载</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载&#8230;</string>


    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>


</resources>
