<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login_str"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:textSize="@dimen/textsize_24"
        android:textColor="@color/gray_color_33" />

    <EditText
        android:id="@+id/login_phone_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_10"
        android:maxLines="1"
        android:layout_marginRight="@dimen/margin_10"
        android:inputType="phone"
        android:background="@null"
        android:gravity="center_vertical"
        android:textColorHint="@color/gray_color_99"
        android:textColor="@color/gray_color_33"
        android:textSize="@dimen/textsize_14"
        android:hint="@string/phone_str" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:background="@color/gray_color_ee" />

    <EditText
        android:id="@+id/login_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@null"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textColorHint="@color/gray_color_99"
        android:textColor="@color/gray_color_33"
        android:textSize="@dimen/textsize_14"
        android:inputType="textPassword"
        android:hint="@string/pwd_str" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_10"
        android:background="@color/gray_color_ee" />

    <Button
        android:id="@+id/login_submit_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/square_corners_red_bg"
        android:text="@string/login_str"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_16" />

    <Button
        android:id="@+id/login_register_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/square_hollow_red_bg"
        android:text="@string/new_regist_str"
        android:textColor="@color/red_color_f93448"
        android:textSize="@dimen/textsize_16" />

    <TextView
        android:id="@+id/login_lose_pwd_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:paddingRight="@dimen/margin_15"
        android:paddingTop="@dimen/margin_10"
        android:textSize="@dimen/textsize_14"
        android:textColor="@color/gray_color_99"
        android:text="@string/lose_pwd_str" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_color_99"
                android:textSize="@dimen/textsize_12"
                android:text="@string/skip_login_str" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_wechat_iv"
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_50"
                    android:src="@mipmap/wechat" />

                <ImageView
                    android:id="@+id/login_qq_iv"
                    android:layout_width="@dimen/margin_50"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_height="@dimen/margin_50"
                    android:src="@mipmap/qq" />

                <ImageView
                    android:id="@+id/login_sina_iv"
                    android:layout_width="@dimen/margin_50"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_height="@dimen/margin_50"
                    android:src="@mipmap/sina" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
