<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <TextView
        android:id="@+id/register_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/new_regist_str"
        android:textColor="@color/gray_color_33"
        android:textSize="@dimen/textsize_24" />

    <EditText
        android:id="@+id/register_phone_Et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/phone_str"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@color/gray_color_33"
        android:textColorHint="@color/gray_color_99"
        android:textSize="@dimen/textsize_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_10"
        android:background="@color/gray_color_ee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/register_code_Et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/regist_code_str"
                android:inputType="numberSigned"
                android:maxEms="6"
                android:maxLines="1"
                android:textColor="@color/gray_color_33"
                android:textColorHint="@color/gray_color_99"
                android:textSize="@dimen/textsize_14" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_color_ee" />

            <Button
                android:id="@+id/register_get_code_bt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_20"
                android:paddingRight="@dimen/margin_20"
                android:text="获取验证码"
                android:textColor="@color/red_color_f93448"
                android:textSize="@dimen/textsize_12" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color_ee" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50">

            <EditText
                android:id="@+id/register_set_pwd_Et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_50"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@null"
                android:maxLines="1"
                android:layout_centerVertical="true"
                android:hint="@string/regist_pwd_str"
                android:inputType="textPassword"
                android:textColor="@color/gray_color_33"
                android:textColorHint="@color/gray_color_99"
                android:textSize="@dimen/textsize_14" />

            <View
                android:id="@+id/register_set_pwd_Et_see"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="19dp"
                android:visibility="gone"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_height="14.5dp"
                android:background="@mipmap/see_logo" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_color_ee" />

    </LinearLayout>

    <Button
        android:id="@+id/register_submit_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/square_corners_red_bg"
        android:text="@string/regist_str"
        android:textColor="@color/white_color"
        android:textSize="@dimen/textsize_16" />

    <TextView
        android:id="@+id/register_getvoice_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_15"
        android:gravity="center"
        android:paddingRight="@dimen/margin_15"
        android:paddingTop="@dimen/margin_10"
        android:text="@string/lose_pwd_str"
        android:textColor="@color/gray_color_99"
        android:textSize="@dimen/textsize_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/login_third_lly"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip_login_str"
                android:textColor="@color/gray_color_99"
                android:textSize="@dimen/textsize_12" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_wechat_iv"
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_50"
                    android:contentDescription="@null"
                    android:background="@mipmap/wechat" />

                <ImageView
                    android:id="@+id/login_qq_iv"
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:contentDescription="@null"
                    android:background="@mipmap/qq" />

                <ImageView
                    android:id="@+id/login_sina_iv"
                    android:layout_width="@dimen/margin_50"
                    android:contentDescription="@null"
                    android:layout_height="@dimen/margin_50"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:background="@mipmap/sina" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
